add search for transcripted words

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 <body>
   <div>
     <h1>Litteroinnit</h1>
+    <div><a href="/search">Hakusivu</a></div>
     <div>
       {% if session.user_id %}
       <h2>Tervetuloa!</h2>
