--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -26,11 +26,13 @@
         {% if text_fragments %}
         <h3>Aikakoodi tekstit:</h3>
 
+        <!-- todo pagination -->
         {% for id, start_sec, start_ms, words in text_fragments[:18] %}
         <div>
             <p><span> <a rel="noreferrer noopener" target="_blank"
                         href="{{transcription.source_path }}&t={{start_sec}}"> {{start_sec}}</a>:</span>
                 <span>{{words}}</span> | <a href="/edit_text_fragment/{{ id }}">Muokkaa</a>
+                | <a href="/remove_text_fragment/{{ id }}">Poista</a>
             </p>
         </div>
 
