fix text update

--- a/templates/edit_text_fragment.html
+++ b/templates/edit_text_fragment.html
@@ -13,7 +13,7 @@
     <p>
       <span> {{text_fragment.id}} </span>
       <span> {{text_fragment.start_ms}} </span>
-      <input type="text" name="title" size="120" value="{{text_fragment.words}}" />
+      <input type="text" name="words" size="120" value="{{text_fragment.words}}" />
 
     </p>
 
