--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -40,8 +40,17 @@
 
         {% for id, start_sec, start_ms, words in text_fragments %}
         <div>
-            <p><span> <a rel="noreferrer noopener" target="_blank"
-                        href="{{transcription.source_path }}&t={{start_sec}}"> {{start_sec}}</a>:</span>
+            <p><span>
+
+                    {% if transcription.source == 'youtube' %}
+                    <a rel="noreferrer noopener" target="_blank" href="{{transcription.source_path }}&t={{start_sec}}">
+                        {{start_sec}}</a>
+                    {% else %}
+                    <span>{{start_sec}}</span>
+                    {% endif %}
+                    :</span>
+
+
                 <span>{{words}}</span> | <a href="/edit_text_fragment/{{ id }}">Muokkaa</a>
                 | <a href="/remove_text_fragment/{{ id }}">Poista</a> | <span class="text_id">{{id}}</span>
             </p>
