add license column to transcriptions

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -26,6 +26,7 @@
         <li>Lähde: {{ transcription.source }}</li>
 
         <li>Lajityyppi: {{ transcription.genre }}</li>
+        <li>Lisenssi: {{ transcription.license }}</li>
         <li>Raaka sisältö: {{ transcription.raw_content[:50] }}</li>
     </ul>
     <div>
