--- a/templates/edit.html
+++ b/templates/edit.html
@@ -27,10 +27,14 @@
       <br />
       Lajityyppi:
       <input type="text" name="genre" value="{{transcription.genre}}" />
+
+      <br />
+      Lisenssi:
+      <input type="text" size="50" name="license" value="{{transcription.license}}" />
     </p>
     <p>
       Aikaleimattu teksti<br />
-      <textarea name="raw_content" rows="10" cols="90">{{transcription.raw_content}}</textarea>
+      <textarea name=" raw_content" rows="10" cols="90">{{transcription.raw_content}}</textarea>
     </p>
     <input type="submit" value="Lähetä" />
   </form>
