add webvtt format as supported subtitles/transcription

--- a/templates/create.html
+++ b/templates/create.html
@@ -29,10 +29,11 @@
                     Äänitiedoston nimi tai url:
                     <input type="text" size="50" name="source_path" />
                     <br />
-                    Tekstityksen lähde:
+                    Tekstityksen lähde/formaatti:
                     <select name="source" id="source">
                         <option value="youtube">Youtube auto captions</option>
                         <option value="word">Word transcribe</option>
+                        <option value="webvtt">WebVTT</option>
                     </select>
 
                     <br />
