show "EMTPTY" text if transcription raw string is empty

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -29,7 +29,13 @@
         <li>Lisenssi: {{ transcription.license }}</li>
         <li>Luotu: {{ transcription.created }}</li>
         <li>Muokattu: {{ transcription.last_modified }}</li>
-        <li>Raaka sisältö: {{ transcription.raw_content[:50] }} ...</li>
+        <li>Raaka sisältö:
+            {% if transcription.raw_content %}
+            {{ transcription.raw_content[:50] }} ...
+            {% else %}
+            <span>TYHJÄ</span>
+            {% endif %}
+        </li>
     </ul>
     <div>
         {% if text_fragments %}
