--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -20,6 +20,7 @@
         .rows-header-columns {
             background-color: rgb(230, 223, 212);
             padding: 0.2rem 0;
+            border-bottom: solid black 1px;
         }
 
         .rows-header-columns span {}
@@ -36,6 +37,7 @@
 
         .transcript-row-words {
             width: 70%;
+            padding: 0 0.6rem;
         }
     </style>
 </head>
