return to referred page after removal page of text row

--- a/templates/remove_text.html
+++ b/templates/remove_text.html
@@ -18,6 +18,7 @@
         </p>
         <input type="submit" name="continue" value="Jatka" />
         <input type="submit" name="cancel" value="Peruuta" />
+        <input type="text" hidden name="return_page" value="{{return_page}}">
     </form>
 </body>
 
