--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -101,7 +101,8 @@
 
         <div class="transcript-row-words">{{words}}</div> | <div><a
                 href="/edit_text_fragment/{{ id }}?return_page={{page}}">Muokkaa</a>
-            | <a href="/remove_text_fragment/{{ id }}">Poista</a> | <span class="text_id">{{id}}</span>
+            | <a href="/remove_text_fragment/{{ id }}?return_page={{page}}">Poista</a> | <span
+                class="text_id">{{id}}</span>
         </div>
     </div>
 
