add edit transcription link in show transcription page

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -67,6 +67,7 @@
             {% endif %}
         </li>
     </ul>
+    <p><a href="/edit/{{ transcription.id }}">Muokkaa</a> </p>
     <div>
         {% if text_fragments %}
         <h3>Aikakoodi tekstit sivu {{page}}:</h3>
