add record_date and duration_sec columns to transcriptions data item

--- a/templates/create.html
+++ b/templates/create.html
@@ -39,6 +39,13 @@
                     <br />
                     Lajityyppi:
                     <input type="text" name="genre" />
+                    <br />
+                    Tallenteen päivämäärä:
+                    <input type="text" size="50" name="record_date" />
+
+                    <br />
+                    Pituus ( h:m:s / sec):
+                    <input type="text" size="50" name="duration_sec" />
 
                     <br />
                     Lisenssi:
