--- a/templates/edit.html
+++ b/templates/edit.html
@@ -29,6 +29,14 @@
       <input type="text" name="genre" value="{{transcription.genre}}" />
 
       <br />
+      Tallenteen päivämäärä:
+      <input type="text" size="50" name="record_date" value="{{transcription.record_date}}" />
+
+      <br />
+      Pituus ( h:m:s / sec):
+      <input type="text" size="50" name="duration_sec" value="{{transcription.duration_sec}}" />
+
+      <br />
       Lisenssi:
       <input type="text" size="50" name="license" value="{{transcription.license}}" />
     </p>
