add file name to index listing

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@
         <h3>
           <a href="/transcription/{{ transcription.id }}">{{ transcription.title }}</a>
         </h3>
+        <p>Tiedosto: {{ transcription.source_path }} </p>
         <p>Lajityyppi: {{ transcription.genre }} </p>
         <p>Käyttäjä: {{ transcription.username }} </p>
         <p>Muokattu: {{ transcription.last_modified }} </p>
