--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,9 @@
 
     .transcription .operations {
       background-color: antiquewhite;
-      width: 10rem;
+      width: 8rem;
       margin: 0.4rem 0;
+      padding: 0.1rem 1rem;
     }
   </style>
 </head>
