add extra metadada columns to transcription

--- a/templates/create.html
+++ b/templates/create.html
@@ -50,6 +50,10 @@
                     <br />
                     Lisenssi:
                     <input type="text" size="50" name="license" />
+
+                    <br />
+                    Metadata:
+                    <input type="text" size="50" name="extra_meta_data" />
                 </p>
                 <p>
                     Aikaleimattu teksti (kopioi Word transcribe toiminnon tulos tai youtube tekstitys tähän):<br />
