--- a/templates/edit.html
+++ b/templates/edit.html
@@ -39,6 +39,9 @@
       <br />
       Lisenssi:
       <input type="text" size="50" name="license" value="{{transcription.license}}" />
+      <br />
+      Metadata:
+      <input type="text" size="50" name="extra_meta_data" value="{{transcription.extra_meta_data}}" />
     </p>
     <p>
       Aikaleimattu teksti<br />
