--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -58,6 +58,7 @@
         <li>Tallenteen päivämäärä: {{ transcription.record_date }}</li>
         <li>Pituus: {{ convert_seconds_to_hms(transcription.duration_sec) }}</li>
         <li>Lisenssi: {{ transcription.license }}</li>
+        <li>Metadata: {{ transcription.extra_meta_data }}</li>
         <li>Luotu: {{ transcription.created }}</li>
         <li>Muokattu: {{ transcription.last_modified }}</li>
         <li>Raaka sisältö:
