add insert single timed text form and handler

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -128,6 +128,7 @@
                 href="/edit_text_fragment/{{ id }}?return_page={{page}}">Muokkaa</a>
             | <a href="/remove_text_fragment/{{ id }}?return_page={{page}}">Poista</a> | <span
                 class="text_id">{{id}}</span>
+            | <a href="/add_text_fragment/{{ transcription.id }}?return_page={{page}}">Lisää</a>
         </div>
     </div>
 
