add upload sound file stub

--- a/templates/create.html
+++ b/templates/create.html
@@ -54,6 +54,10 @@
                     <br />
                     Metadata:
                     <input type="text" size="50" name="extra_meta_data" />
+                    <br />
+                    Lisää äänitiedosto:
+                    <input type=file name="sound_file">
+
                 </p>
                 <p>
                     Aikaleimattu teksti (kopioi Word transcribe toiminnon tulos tai youtube tekstitys tähän):<br />
