--- a/templates/search.html
+++ b/templates/search.html
@@ -33,8 +33,8 @@
             <form action="/search" method="get">
                 <p>
                     Hae litteroinneista hakusanalla:
-                    {% if query %}
-                    <input type="text" name="query" value="{{ query }}" />
+                    {% if text_query %}
+                    <input type="text" name="query" value="{{ text_query }}" />
                     {% else %}
                     <input type="text" name="query" />
                     {% endif %}
@@ -46,8 +46,8 @@
             <form action="/search_titles" method="get">
                 <p>
                     Hae otsikoista:
-                    {% if query %}
-                    <input type="text" name="query" value="{{ query }}" />
+                    {% if title_query %}
+                    <input type="text" name="query" value="{{ title_query }}" />
                     {% else %}
                     <input type="text" name="query" />
                     {% endif %}
@@ -59,8 +59,8 @@
             <form action="/search_file_name" method="get">
                 <p>
                     Hae tiedostonimellä:
-                    {% if query %}
-                    <input type="text" name="query" value="{{ query }}" />
+                    {% if file_name_query %}
+                    <input type="text" name="query" value="{{ file_name_query }}" />
                     {% else %}
                     <input type="text" name="query" />
                     {% endif %}
@@ -68,7 +68,7 @@
                 <input type="submit" value="Hae" />
             </form>
         </div>
-        {% if query %}
+        {% if file_name_query or text_query or title_query %}
 
         <h2>Tulokset</h2>
         {% if results %}
