--- a/templates/search.html
+++ b/templates/search.html
@@ -27,7 +27,7 @@
 
 <body>
     <div>
-
+        <a href="/">Palaa etusivulle</a>
         <h2>Haku</h2>
         <div class="search-section">
             <form action="/search" method="get">
