add statistics page with duplicates listings

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 <body>
   <div>
     <h1>Litteroinnit</h1>
-    <div><a href="/search">Hakusivu</a></div>
+    <div><a href="/search">Hakusivu</a> | <a href="/stats">Tilastoja</a></div>
     <div>
       {% if session.user_id %}
       <h2>Tervetuloa!</h2>
