--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -18,6 +18,16 @@
       {% endfor %}
     </ul>
     <hr />
+    <h2>Lajityypit:</h2>
+
+    <ul>
+      {% for genre_stat in genre_stats %}
+      <li> <a href="/transcription/">{{genre_stat.genre}} </a> : {{genre_stat.count}} </li>
+      {% endfor %}
+    </ul>
+
+
+    <hr />
     <p>
       <a href="/">Etusivulle</a>
     </p>
